updating portfolio and bio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
     <div id="navBar">
         <p id="titles" class="hovertext" 
-            data-hover="Erida is a young architect with a special interest in computational design. She is currently a student of the Master in Advanced Computation for Architecture and Design in IAAC "
+            data-hover="Erida Bendo is an architect and computational designer.       
+            Her interests include performance based design, geospatial analytics, graph machine learning especially pertaining to street networks and the development of web based applications, leveraging Rhino.Compute and the open source library IFC.js
+            "
             >Bio</p>
         <p id="titles">  
             <a href="portfolio.pdf" target="blank">Projects</a> 
